# kaspersky-hackathon

./: .gitignore  dockerfile  readme.md  shell.sh
task1/: .gitignore  Dockerfile  readme.md
task2/: CMakeLists.txt  cross-build.sh  readme.md  results.txt
task2/einit/: CMakeLists.txt
task2/einit/src/: init.yaml.in  security.psl.in
task2/hello/: CMakeLists.txt
task2/hello/src/: hello.c
task3/: mosquitto.conf.me  readme.md
task3/mqtt_subscriber/: CMakeLists.txt  README.md
task3/mqtt_subscriber/subscriber/: CMakeLists.txt
task3/mqtt_subscriber/subscriber/src/: main.cpp  subscriber.cpp
